@@ -5,24 +5,42 @@ useradd -u 91 tomcat -U -r -s /sbin/nologin
 curl -fjkLO http://www-us.apache.org/dist/tomcat/tomcat-9/v9.0.0.M6/bin/apache-tomcat-9.0.0.M6.tar.gz
 
 tar xf apache-tomcat-9.0.0.M6.tar.gz -C /usr/share
-
 mv /usr/share/apache-tomcat-9.0.0.M6 /usr/share/tomcat9
 
 chown root:tomcat -R /usr/share/tomcat9/
-chown root:tomcat -R /usr/share/tomcat9/*
+chmod 775 /usr/share/tomcat9/
 
+chown root:tomcat -R /usr/share/tomcat9/conf
+chmod 755 /usr/share/tomcat9/conf
 mv /usr/share/tomcat9/conf /etc/tomcat9
 ln -s /etc/tomcat9 /usr/share/tomcat9/conf
-mkdir /etc/tomcat9/Catalina
-mkdir /etc/tomcat9/Catalina/localhost
+chown tomcat:root -R /etc/tomcat9/*
+chmod 664 /etc/tomcat9/*
+chmod 660 /etc/tomcat9/tomcat-users.xml
+
+mkdir -p /etc/tomcat9/Catalina/localhost
 chown root:tomcat /etc/tomcat9/Catalina
 chown root:tomcat /etc/tomcat9/Catalina/localhost
+chmod 775 /etc/tomcat9/Catalina
+chmod 775 /etc/tomcat9/Catalina/localhost
 
+chown root:tomcat -R /usr/share/tomcat9/{logs,temp,work}
+chmod 770 /usr/share/tomcat9/{logs,temp,work}
 mv /usr/share/tomcat9/logs /var/log/tomcat9
 ln -s /var/log/tomcat9 /usr/share/tomcat9/logs
 
 mkdir /var/cache/tomcat9
 chown root:tomcat -R /var/cache/tomcat9/
+chmod 770 /var/cache/tomcat9
+mv /usr/share/tomcat9/temp /var/cache/tomcat9/temp
+mv /usr/share/tomcat9/work /var/cache/tomcat9/work
+ln -s /var/cache/tomcat9/temp /usr/share/tomcat9/temp
+ln -s /var/cache/tomcat9/work /usr/share/tomcat9/work
+
+mkdir /var/lib/tomcat9
+chown root:tomcat /var/lib/tomcat9
+chmod 775 /var/lib/tomcat9
+
 mv /usr/share/tomcat9/temp /var/cache/tomcat9/temp
 ln -s /var/cache/tomcat9/temp /usr/share/tomcat9/temp
 mv /usr/share/tomcat9/work /var/cache/tomcat9/work
@@ -30,18 +48,25 @@ ln -s /var/cache/tomcat9/work /usr/share/tomcat9/work
 
 mkdir /var/lib/tomcat9
 chown root:tomcat /var/lib/tomcat9
+chmod 755 /var/lib/tomcat9
+
+chown root:tomcat /usr/share/tomcat9/webapps
+chmod 775 /usr/share/tomcat9/webapps
+chown tomcat:tomcat -R /usr/share/tomcat9/webapps/*
 mv /usr/share/tomcat9/webapps /var/lib/tomcat9/webapps
+ln -s /var/lib/tomcat9/webapps /usr/share/tomcat9/webapps
 
-mkdir /var/lib/tomcat9s
-chown root:tomcat /var/lib/tomcat9s
+mkdir /var/lib/tomcats
+chown root:tomcat /var/lib/tomcats
+chmod 755 /var/lib/tomcats
 
-> /var/run/tomcat9.pid
-chown root:tomcat /var/run/tomcat9.pid
+touch /var/run/tomcat9.pid
+chown tomcat:tomcat /var/run/tomcat9.pid
 
 cat <<_EOT_> /etc/sysconfig/tomcat9
 # Service-specific configuration file for tomcat. This will be sourced by
 # the SysV init script after the global configuration file
-# /etc/tomcat/tomcat.conf, thus allowing values to be overridden in
+# /etc/tomcat9/tomcat9.conf, thus allowing values to be overridden in
 # a per-service manner.
 #
 # NEVER change the init script itself. To change values for all services make
@@ -97,6 +122,7 @@ cat <<_EOT_> /etc/sysconfig/tomcat9
 
 _EOT_
 chown root:tomcat /etc/sysconfig/tomcat9
+chmod 644 /etc/sysconfig/tomcat9
 
 cat <<_EOT_> /etc/tomcat9/tomcat9.conf
 # System-wide configuration file for tomcat services
@@ -104,13 +130,13 @@ cat <<_EOT_> /etc/tomcat9/tomcat9.conf
 # so please keep the syntax.
 #
 # There are 2 "classes" of startup behavior in this package.
-# The old one, the default service named tomcat9.service.
+# The old one, the default service named tomcat.service.
 # The new named instances are called tomcat9@instance.service.
 #
 # Use this file to change default values for all services.
 # Change the service specific ones to affect only one service.
-# For tomcat9.service it's /etc/sysconfig/tomcat9, for
-# tomcat9@instance it's /etc/sysconfig/tomcat9@instance.
+# For tomcat.service it's /etc/sysconfig/tomcat9, for
+# tomcat@instance it's /etc/sysconfig/tomcat9@instance.
 
 # This variable is used to figure out if config is loaded or not.
 TOMCAT_CFG_LOADED="1"
@@ -147,168 +173,40 @@ SECURITY_MANAGER="false"
 # If you wish to further customize your tomcat environment,
 # put your own definitions here
 # (i.e. LD_LIBRARY_PATH for some jdbc drivers)
-_EOT_
-chown root:tomcat /etc/tomcat9/tomcat9.conf
-
-mkdir /usr/libexec/tomcat9
-cat <<_EOT_> /usr/libexec/tomcat9/functions
-#!/bin/bash
-
-if [ -r /usr/share/java-utils/java-functions ]; then
-  . /usr/share/java-utils/java-functions
-else
-  echo "Can't read Java functions library, aborting"
-  exit 1
-fi
-
-_save_function() {
-    local ORIG_FUNC=\$(declare -f \$1)
-    local NEWNAME_FUNC="\$2\${ORIG_FUNC#\$1}"
-    eval "\$NEWNAME_FUNC"
-}
-
-run_jsvc(){
-    if [ -x /usr/bin/jsvc ]; then
-	TOMCAT_USER="tomcat"
-       	JSVC="/usr/bin/jsvc"
-	
-	JSVC_OPTS="-nodetach -pidfile /var/run/jsvc-tomcat\${NAME}.pid -user \${TOMCAT_USER} -outfile \${CATALINA_BASE}/logs/catalina.out -errfile \${CATALINA_BASE}/logs/catalina.out"
-	if [ "\$1" = "stop" ]; then
-		JSVC_OPTS="\${JSVC_OPTS} -stop"
-    	fi
-
-        exec "\${JSVC}" \${JSVC_OPTS} \${FLAGS} -classpath "\${CLASSPATH}" \${OPTIONS} "\${MAIN_CLASS}" "\${@}"
-    else
-       	echo "Can't find /usr/bin/jsvc executable"
-    fi
-
-}
-
-_save_function run run_java
-
-run() {
-   if [ "\${USE_JSVC}" = "true" ] ; then
-	run_jsvc \$@
-   else
-	run_java \$@
-   fi
-}
 
 _EOT_
+chown tomcat:tomcat /etc/tomcat9/tomcat9.conf
+chmod 664 /etc/tomcat9/tomcat9.conf
 
-cat <<_EOT_> /usr/libexec/tomcat9/preamble
-#!/bin/bash
-
-. /usr/libexec/tomcat9/functions
-
-# Get the tomcat config (use this for environment specific settings)
-
-if [ -z "\${TOMCAT_CFG_LOADED}" ]; then
-  if [ -z "\${TOMCAT_CFG}" ]; then
-    TOMCAT_CFG="/etc/tomcat9/tomcat.conf"
-  fi
-  . \$TOMCAT_CFG
-fi
-
-if [ -z "\$CATALINA_BASE" ]; then
-  if [ -n "\$NAME" ]; then
-    if [ -z "\$TOMCATS_BASE" ]; then
-      TOMCATS_BASE="/var/lib/tomcat9s/"
-    fi
-    CATALINA_BASE="\${TOMCATS_BASE}\${NAME}"
-  else
-    CATALINA_BASE="\${CATALINA_HOME}"
-  fi
-fi
-VERBOSE=1
-set_javacmd
-cd \${CATALINA_HOME}
-# CLASSPATH munging
-if [ ! -z "\$CLASSPATH" ] ; then
-  CLASSPATH="\$CLASSPATH":
-fi
-
-if [ -n "\$JSSE_HOME" ]; then
-  CLASSPATH="\${CLASSPATH}\$(build-classpath jcert jnet jsse 2>/dev/null):"
-fi
-CLASSPATH="\${CLASSPATH}\${CATALINA_HOME}/bin/bootstrap.jar"
-CLASSPATH="\${CLASSPATH}:\${CATALINA_HOME}/bin/tomcat-juli.jar"
-CLASSPATH="\${CLASSPATH}:\$(build-classpath commons-daemon 2>/dev/null)"
-
-if [ -z "\$LOGGING_PROPERTIES" ] ; then
-  LOGGING_PROPERTIES="\${CATALINA_BASE}/conf/logging.properties"
-  if [ ! -f "\${LOGGING_PROPERTIES}" ] ; then
-    LOGGING_PROPERTIES="\${CATALINA_HOME}/conf/logging.properties"
-  fi
-fi
-
-_EOT_
-
-cat <<_EOT_> /usr/libexec/tomcat9/server
-#!/bin/bash
-
-. /usr/libexec/tomcat9/preamble
-
-MAIN_CLASS=org.apache.catalina.startup.Bootstrap
-
-FLAGS="\$JAVA_OPTS \$CATALINA_OPTS"
-OPTIONS="-Dcatalina.base=\$CATALINA_BASE \
--Dcatalina.home=\$CATALINA_HOME \
--Djava.endorsed.dirs=\$JAVA_ENDORSED_DIRS \
--Djava.io.tmpdir=\$CATALINA_TMPDIR \
--Djava.util.logging.config.file=\${LOGGING_PROPERTIES} \
--Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager"
-
-if [ "\$1" = "start" ] ; then
-  if [ "\${SECURITY_MANAGER}" = "true" ] ; then
-    OPTIONS="\${OPTIONS} \
-    -Djava.security.manager \
-    -Djava.security.policy==\${CATALINA_BASE}/conf/catalina.policy"
-  fi
-  run start
-elif [ "\$1" = "stop" ] ; then
-  run stop
-fi
-
-_EOT_
-
-chown root:tomcat /usr/libexec/tomcat9/
-chown root:tomcat -R /usr/libexec/tomcat9/*
-
-cat <<_EOT_> /usr/systemd/system/tomcat.service
-# Systemd unit file for default tomcat
-# 
-# To create clones of this service:
-# DO NOTHING, use tomcat@.service instead.
-
+cat <<_EOT_> /usr/lib/systemd/system/tomcat9.service
 [Unit]
 Description=Apache Tomcat Web Application Container
 After=syslog.target network.target
 
 [Service]
-Type=simple
-EnvironmentFile=/etc/tomcat9/tomcat9.conf
+Type=forking
+EnvironmentFile=/etc/tomcat/tomcat9.conf
 Environment="NAME="
 EnvironmentFile=-/etc/sysconfig/tomcat9
-ExecStart=/usr/libexec/tomcat9/server start
-ExecStop=/usr/libexec/tomcat9/server stop
+ExecStart=/usr/share/tomcat9/bin/startup.sh
+ExecStop=/usr/share/tomcat9/bin/shutdown.sh
 SuccessExitStatus=143
 User=tomcat
 Group=tomcat
-
 
 [Install]
 WantedBy=multi-user.target
 
 _EOT_
+chmod 644 /usr/lib/systemd/system/tomcat9.service
 
-cat <<_EOT_> /usr/systemd/system/tomcat9@.service
+cat <<_EOT_> /usr/lib/systemd/system/tomcat9@.service
 # Systemd unit file for tomcat instances.
 # 
 # To create clones of this service:
-# 0. systemctl enable tomcat9@name.service
+# 0. systemctl enable tomcat@name.service
 # 1. create catalina.base directory structure in
-#    /var/lib/tomcat9s/name
+#    /var/lib/tomcats/name
 # 2. profit.
 
 [Unit]
@@ -316,12 +214,12 @@ Description=Apache Tomcat Web Application Container
 After=syslog.target network.target
 
 [Service]
-Type=simple
-EnvironmentFile=/etc/tomcat9/tomcat9.conf
+Type=forking
+EnvironmentFile=/etc/tomcat/tomcat9.conf
 Environment="NAME=%I"
 EnvironmentFile=-/etc/sysconfig/tomcat9@%I
-ExecStart=/usr/libexec/tomcat9/server start
-ExecStop=/usr/libexec/tomcat9/server stop
+ExecStart=/usr/share/tomcat9/bin/startup.sh
+ExecStop=/usr/share/tomcat9/bin/shutdown.sh
 SuccessExitStatus=143
 User=tomcat
 Group=tomcat
@@ -330,4 +228,5 @@ Group=tomcat
 WantedBy=multi-user.target
 
 _EOT_
+chmod 644 /usr/lib/systemd/system/tomcat9@.service
 
